// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components | Position / basic Above 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;Above /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic AboveLeft 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;AboveLeft /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic AboveRight 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;AboveRight /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic Below 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;Below /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic BelowLeft 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;BelowLeft /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic BelowRight 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;BelowRight /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic LeftOf 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;LeftOf /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic RightOf 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;RightOf /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target Above 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;Above /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target AboveLeft 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;AboveLeft /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target AboveRight 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;AboveRight /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target Below 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;Below /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target BelowLeft 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;BelowLeft /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target BelowRight 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;BelowRight /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target LeftOf 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;LeftOf /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target RightOf 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;RightOf /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / in custom portal Above 1`] = `
<div
  className={
    Object {
      "data-css-vpj4z2": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;Above /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal AboveLeft 1`] = `
<div
  className={
    Object {
      "data-css-vpj4z2": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;AboveLeft /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal AboveRight 1`] = `
<div
  className={
    Object {
      "data-css-vpj4z2": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;AboveRight /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal Below 1`] = `
<div
  className={
    Object {
      "data-css-vpj4z2": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;Below /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal BelowLeft 1`] = `
<div
  className={
    Object {
      "data-css-vpj4z2": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;BelowLeft /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal BelowRight 1`] = `
<div
  className={
    Object {
      "data-css-vpj4z2": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;BelowRight /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal LeftOf 1`] = `
<div
  className={
    Object {
      "data-css-vpj4z2": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;LeftOf /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal RightOf 1`] = `
<div
  className={
    Object {
      "data-css-vpj4z2": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    &lt;RightOf /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in scrollable container RightOf 1`] = `
<div
  className={
    Object {
      "data-css-s48i2c": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1ezr34k": "",
      }
    }
  />
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    target
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-c17omc=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    className={
      Object {
        "data-css-1ezr34k": "",
      }
    }
  />
</div>
`;

exports[`Storyshots Utilities | Position / position fns above 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    above
  </div>
  <div
    data-css-c17omc=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-1kbx59o=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns aboveLeft 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    aboveLeft
  </div>
  <div
    data-css-c17omc=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-g58j1y=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns aboveRight 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    aboveRight
  </div>
  <div
    data-css-c17omc=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-ogqxtl=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns below 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    below
  </div>
  <div
    data-css-c17omc=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-1sx28dq=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns belowLeft 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    belowLeft
  </div>
  <div
    data-css-c17omc=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-18ju24q=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns belowRight 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    belowRight
  </div>
  <div
    data-css-c17omc=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-bkjqmk=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns leftOf 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    leftOf
  </div>
  <div
    data-css-c17omc=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns rightOf 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-1erb2v7": "",
      }
    }
  >
    rightOf
  </div>
  <div
    data-css-c17omc=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
  </div>
</div>
`;
